# educationalsp

./: Cargo.toml  log.txt
src/: main.rs
src/lsp/: initialize.rs  message.rs  mod.rs
src/rpc/: mod.rs
