[package]
name = "educationalsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
log = "0.4.21"
log4rs = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simple-log = "1.6.0"
